restructure slides into different sessions

--- a/index.html
+++ b/index.html
@@ -1,17 +1,49 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GDCR 2024 Vienna</title>
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/theme/simple.css">
 </head>
+
 <body>
     <div class="reveal">
-        <div class="slides">            
-            <section data-markdown="slides.md"></section>
+        <div class="slides">
+            <section>
+                Global Day of Coderetreat 2024
+            </section>
+            <section>
+                <section data-markdown="00_intro.md"></section>
+            </section>
+            <section>
+                <section data-markdown="01_session01.md"></section>
+                <section data-markdown="_retrospective.md"></section>
+                <section data-markdown="_short_break.md"></section>
+            </section>
+            <section>
+                <section data-markdown="02_session02.md"></section>
+            </section>
+            <section>
+                <section data-markdown="03_lunch.md"></section>
+            </section>
+            <section>
+                <section data-markdown="04_session03.md"></section>
+                <section data-markdown="_retrospective.md"></section>
+                <section data-markdown="_short_break.md"></section>
+            </section>
+            <section>
+                <section data-markdown="05_session04.md"></section>
+            </section>
+            <section>
+                <section data-markdown="06_session05.md"></section>
+            </section>
+            <section>
+                <section data-markdown="07_closing.md"></section>
+            </section>
         </div>
     </div>
 
@@ -32,4 +64,5 @@
         });
     </script>
 </body>
+
 </html>
