Format, extend facilitator URLs, add session structure.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <section data-markdown="00_intro.md"></section>
             </section>
             <section>
+                <section data-markdown="00b_connect.md"></section>
+            </section>
+            <section>
                 <section data-markdown="01_session01.md"></section>
                 <section data-markdown="_retrospective.md"></section>
                 <section data-markdown="_short_break.md"></section>
