Fill in some material all over the place.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </section>
             <section>
                 <section data-markdown="02_session02.md"></section>
+                <section data-markdown="_retrospective.md"></section>
             </section>
             <section>
                 <section data-markdown="03_lunch.md"></section>
@@ -36,13 +37,16 @@
             <section>
                 <section data-markdown="04_session03.md"></section>
                 <section data-markdown="_retrospective.md"></section>
-                <section data-markdown="_short_break.md"></section>
+                <section data-markdown="_coffee_break.md"></section>
             </section>
             <section>
                 <section data-markdown="05_session04.md"></section>
+                <section data-markdown="_retrospective.md"></section>
+                <section data-markdown="_short_break.md"></section>
             </section>
             <section>
                 <section data-markdown="06_session05.md"></section>
+                <section data-markdown="_retrospective.md"></section>
             </section>
             <section>
                 <section data-markdown="07_closing.md"></section>
