make incremental slides discoverable

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <section data-markdown="_short_break.md"></section>
             </section>
             <section>
-                <section data-markdown="02_session02.md"></section>
+                <section data-markdown="02_session02_incremental.md"></section>
                 <section data-markdown="_retrospective.md"></section>
             </section>
             <section>
