--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <section data-markdown="03_lunch.md"></section>
             </section>
             <section>
-                <section data-markdown="04_session03.md"></section>
+                <section data-markdown="04_session03_babysteps.md"></section>
                 <section data-markdown="_coffee_break.md"></section>
             </section>
             <section>
