--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <section data-markdown="00b_connect.md"></section>
             </section>
             <section>
-                <section data-markdown="01_session01.md"></section>
+                <section data-markdown="01_session01_ensemble.md"></section>
                 <section data-markdown="_short_break.md"></section>
             </section>
             <section>
