--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <section data-markdown="04_session03_babysteps.md"></section>
             </section>
             <section>
-                <section data-markdown="05_session04.md"></section>
+                <section data-markdown="05_session04_tcr.md"></section>
             </section>
             <section>
                 <section data-markdown="06_session05.md"></section>
