Split intro into sections.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <div class="reveal">
         <div class="slides">
             <section>
-                <section data-markdown="00_intro.md"></section>
+                <section data-markdown="00_intro01_welcome_.md"></section>
+            </section>
+            <section>
+                <section data-markdown="00_intro02_connect.md"></section>
+            </section>
+            <section>
+                <section data-markdown="00_intro03_coderetreat.md"></section>
             </section>
             <section>
                 <section data-markdown="01_session01_ensemble.md"></section>
