SoCraTes Austria Ticket Raffle

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <section data-markdown="06_session05.md"></section>
             </section>
             <section>
+                <section data-markdown="07a_socrates_raffle.md"></section>
+            </section>
+            <section>
                 <section data-markdown="07_closing.md"></section>
             </section>
         </div>
